# inference-gateway-fastapi

./: .env.example  Dockerfile  Makefile  README.md  models.yaml  pyproject.toml
config/: models.yaml
docs/: additional-todos.txt  llama_cpp_Qwen3.5.txt  todos.txt
gateway/: config.py  main.py
gateway/backend/: __init__.py  factory.py  generic.py  llama_cpp.py  multimodalreq.py  utils.py
gateway/routes/: __init__.py  chats.py
gateway/schema/: __init__.py  chat.py  factory.py  llama_cpp.py
gateway/security/: __init__.py  tokens.py
test/: test_gateway.py
